--- a/.github/workflows/reusable_release_workflow.yml
+++ b/.github/workflows/reusable_release_workflow.yml
@@ -113,7 +113,10 @@ jobs:
           
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v2
-        
+             
+      - name: Install MatBox
+        uses: ehennestad/matbox/.github/actions/install-matbox@v0.9
+      
       # Download test reports
       - uses: actions/download-artifact@v4
         with:
