--- a/.github/workflows/reusable_release_workflow.yml
+++ b/.github/workflows/reusable_release_workflow.yml
@@ -41,6 +41,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         
+      - name: Check for MLToolboxInfo.json
+        run: |
+          if [ ! -f "${{ inputs.tools_directory }}/MLToolboxInfo.json" ]; then
+            echo "Error: MLToolboxInfo.json not found in ${{ inputs.tools_directory }} directory"
+            echo "This file is required for the release workflow to function properly"
+            exit 1
+          fi
+          echo "MLToolboxInfo.json found in ${{ inputs.tools_directory }} directory"
+        
       - name: Validate version
         id: validate
         uses: ehennestad/matbox/.github/actions/validate-version@make-release-workflow-reusable
