--- a/.github/actions/create-github-release/action.yml
+++ b/.github/actions/create-github-release/action.yml
@@ -35,11 +35,23 @@ runs:
         git config user.name "github-actions[bot]"
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-        # Delete the existing tag locally and remotely
-        git tag -d "v${{ inputs.version_number }}" 
-        git push origin --delete "v${{ inputs.version_number }}"
+        # Delete the existing tag locally if it exists
+        if git tag -l "v${{ inputs.version_number }}" | grep -q "v${{ inputs.version_number }}"; then
+          echo "Deleting existing local tag v${{ inputs.version_number }}"
+          git tag -d "v${{ inputs.version_number }}"
+        else
+          echo "Local tag v${{ inputs.version_number }} does not exist"
+        fi
+        
+        # Delete the existing tag remotely if it exists
+        if git ls-remote --tags origin | grep -q "refs/tags/v${{ inputs.version_number }}"; then
+          echo "Deleting existing remote tag v${{ inputs.version_number }}"
+          git push origin --delete "v${{ inputs.version_number }}"
+        else
+          echo "Remote tag v${{ inputs.version_number }} does not exist"
+        fi
       
-        # Recreate the tag with a message, including [skip ci] to prevent CI workflows
+        # Create the tag with a message, including [skip ci] to prevent CI workflows
         git tag -a "v${{ inputs.version_number }}" -m "Release v${{ inputs.version_number }} [skip ci]" 
       
         # Push the new tag to the remote repository
