--- a/.github/workflows/reusable_release_workflow.yml
+++ b/.github/workflows/reusable_release_workflow.yml
@@ -124,7 +124,7 @@ jobs:
         uses: matlab-actions/setup-matlab@v2
              
       - name: Install MatBox
-        uses: ehennestad/matbox/.github/actions/install-matbox@v0.9
+        uses: ehennestad/matbox/.github/actions/install-matbox@make-release-workflow-reusable
       
       # Download test reports
       - uses: actions/download-artifact@v4
