--- a/.github/workflows/reusable_run_codespell.yml
+++ b/.github/workflows/reusable_run_codespell.yml
@@ -1,4 +1,6 @@
-# NB: Will only process "skip" and "ignore-words-list" from the codespell 
+# Note: This workflow allows specifying a custom location for the Codespell 
+# configuration file by defining CONFIG_FILE as an input variable.  
+# Warning: Will only process "skip" and "ignore-words-list" from the codespell 
 # config file if provided
 
 name: Run codespell
