--- a/.github/workflows/reusable_release_workflow.yml
+++ b/.github/workflows/reusable_release_workflow.yml
@@ -19,6 +19,10 @@ on:
         type: string
         default: 'tools'
         description: 'Directory containing tools'
+      matlab_products:
+        description: Optional list of MATLAB products to install.
+        type: string
+        default: ''
       matlab_versions:
         type: string
         default: '[]'
@@ -102,6 +106,8 @@ jobs:
         uses: matlab-actions/setup-matlab@v2
         with:
           release: ${{ matrix.MATLABVersion }}
+          products: ${{ inputs.matlab_products }}
+
 
       - name: Install MatBox
         uses: ehennestad/matbox/.github/actions/install-matbox@make-release-workflow-reusable
