--- a/.github/workflow-templates/prepare-release.yml
+++ b/.github/workflow-templates/prepare-release.yml
@@ -35,6 +35,12 @@ jobs:
       # matlab_versions: '["R2023a", "R2023b", "R2024a"]'
       matlab_versions: '[]'
       
+      # Optional list of MATLAB products to install. Example if adding multiple 
+      # products (use ">" and one product per line):
+      # matlab_products: >
+      #   Image_Processing_Toolbox
+      #   Statistics_and_Machine_Learning_Toolbox
+
       # JSON object mapping MATLAB versions to Python versions. Use this to override
       # specific Python versions for certain MATLAB releases. Only specify versions
       # you want to override - others will use latest supported release from 
