--- a/.github/workflows/deprecated/create_release_deprecated.yml
+++ b/.github/workflows/deprecated/create_release_deprecated.yml
@@ -5,9 +5,9 @@ name: Create new release
 
 # Run workflow when a tag is created
 on:
-  push:
-    tags: 
-      - 'v[0-9]+.[0-9]+.[0-9]+' # Matches tags like v1.2.3
+#  push:
+#    tags: 
+#      - 'v[0-9]+.[0-9]+.[0-9]+' # Matches tags like v1.2.3
   workflow_dispatch:
     inputs:
       version:
